--- a/src/app/pages/post/post-form/post-form.component.html
+++ b/src/app/pages/post/post-form/post-form.component.html
@@ -1,1 +1,191 @@
-<p>post-form works!</p>
+<form nz-form [formGroup]="postForm">
+  <div class="form">
+    <div class="form-left">
+      <nz-form-item>
+        <nz-form-control [nzErrorTip]="titleErrorTpl">
+          <input nz-input type="text" formControlName="title" placeholder="请输入标题"/>
+          <ng-template #titleErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入标题</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item class="vertical">
+        <div class="form-label"><label>标签（{{maxTagNumber}}个以内）</label></div>
+        <nz-form-control>
+          <nz-select
+            nzMode="tags"
+            nzShowSearch
+            nzServerSearch
+            nzAllowClear
+            formControlName="tag"
+            nzPlaceHolder="请输入标签"
+            [nzMaxTagCount]="maxTagNumber"
+            [nzMaxMultipleCount]="maxTagNumber"
+            (nzOnSearch)="onTagSearch($event)"
+          >
+            <ng-container *ngFor="let tag of tagList">
+              <nz-option *ngIf="!tagListLoading" [nzLabel]="tag" [nzValue]="tag"></nz-option>
+            </ng-container>
+            <nz-option nzCustomContent nzDisabled *ngIf="tagListLoading">
+              <div class="select-loading">
+                <i nz-icon nzType="loading"></i>
+                <span>Loading...</span>
+              </div>
+            </nz-option>
+          </nz-select>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item class="vertical">
+        <div class="form-label"><label>URL</label></div>
+        <nz-form-control [nzErrorTip]="guidErrorTpl">
+          <input nz-input type="text" formControlName="guid" placeholder="请输入URL"/>
+          <ng-template #guidErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入URL</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item class="vertical">
+        <div class="form-label"><label class="required">摘要</label></div>
+        <nz-form-control [nzErrorTip]="excerptErrorTpl">
+          <nz-textarea-count [nzMaxCharacterCount]="maxExcerptLength">
+            <textarea nz-input rows="6" formControlName="excerpt" placeholder="请输入内容摘要"></textarea>
+          </nz-textarea-count>
+          <ng-template #excerptErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入内容摘要</ng-container>
+            <ng-container *ngIf="control.hasError('maxlength')">内容摘要最大长度为{{maxExcerptLength}}字符</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div class="form-right">
+      <nz-form-item>
+        <nz-form-label nzRequired>发布日期</nz-form-label>
+        <nz-form-control [nzErrorTip]="postDateErrorTpl">
+          <nz-date-picker
+            formControlName="postDate"
+            nzPlaceHolder="请选择发布日期"
+            [nzDisabledDate]="disabledDate"
+          ></nz-date-picker>
+          <ng-template #postDateErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请选择发布日期</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired>分类</nz-form-label>
+        <nz-form-control [nzErrorTip]="categoryErrorTpl">
+          <nz-tree-select
+            nzShowSearch
+            nzCheckable
+            nzDefaultExpandAll
+            formControlName="category"
+            nzPlaceHolder="请选择分类"
+            [nzDropdownStyle]="{'max-height': '400px'}"
+            [nzNodes]="postCategoryList"
+          ></nz-tree-select>
+          <ng-template #categoryErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请选择分类</ng-container>
+            <ng-container *ngIf="control.hasError('maxsize')">分类最多选择{{maxTaxonomyNumber}}个</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired>公开度</nz-form-label>
+        <nz-form-control>
+          <nz-select nzAllowClear formControlName="status" nzPlaceHolder="请选择公开度">
+            <nz-option nzLabel="公开" nzValue="publish"></nz-option>
+            <nz-option nzLabel="加密" nzValue="password"></nz-option>
+            <nz-option nzLabel="隐藏" nzValue="private"></nz-option>
+            <nz-option nzLabel="删除" nzValue="trash"></nz-option>
+          </nz-select>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item *ngIf="postForm.get('status')?.value === 'password'">
+        <nz-form-label nzRequired>密码</nz-form-label>
+        <nz-form-control
+          [nzValidateStatus]="postForm.get('password')?.dirty && postForm.errors?.['password'] ? 'error' : 'success'"
+          [nzErrorTip]="passwordErrorTpl"
+        >
+          <input nz-input type="text" formControlName="password" placeholder="请输入密码"/>
+          <ng-template #passwordErrorTpl>
+            <ng-container *ngIf="postForm.errors?.['password']">请输入密码</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired>评论开关</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group formControlName="commentFlag" nzName="commentFlag">
+            <label nz-radio nzValue="open">允许</label>
+            <label nz-radio nzValue="verify">审核</label>
+            <label nz-radio nzValue="close">禁止</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired>是否原创</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group formControlName="original" nzName="original">
+            <label nz-radio [nzValue]="1">原创</label>
+            <label nz-radio [nzValue]="0">转载</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+      <ng-container *ngIf="postForm.get('original')?.value === 0">
+        <nz-form-item>
+          <nz-form-label nzRequired>来源</nz-form-label>
+          <nz-form-control
+            [nzValidateStatus]="postForm.get('source')?.dirty && postForm.errors?.['source'] ? 'error' : 'success'"
+            [nzErrorTip]="sourceErrorTpl"
+          >
+            <input nz-input type="text" formControlName="source" placeholder="请输入来源"/>
+            <ng-template #sourceErrorTpl>
+              <ng-container *ngIf="postForm.errors?.['source']">请输入来源</ng-container>
+            </ng-template>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label nzRequired>作者</nz-form-label>
+          <nz-form-control
+            [nzValidateStatus]="postForm.get('author')?.dirty && postForm.errors?.['author'] ? 'error' : 'success'"
+            [nzErrorTip]="authorErrorTpl"
+          >
+            <input nz-input type="text" formControlName="author" placeholder="请输入作者"/>
+            <ng-template #authorErrorTpl>
+              <ng-container *ngIf="postForm.errors?.['author']">请输入作者</ng-container>
+            </ng-template>
+          </nz-form-control>
+        </nz-form-item>
+      </ng-container>
+      <nz-form-item>
+        <nz-form-label nzRequired>版权类型</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group class="vertical" formControlName="copyrightType" nzName="copyrightType">
+            <label nz-radio [nzValue]="0">禁止转载</label>
+            <label nz-radio [nzValue]="1">转载需授权</label>
+            <label nz-radio [nzValue]="2">CC-BY-NC-ND</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired>插入名片</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group class="vertical" formControlName="wechatCardFlag" nzName="wechatCardFlag">
+            <label nz-radio [nzValue]="1">带分隔线</label>
+            <label nz-radio [nzValue]="2">仅名片</label>
+            <label nz-radio [nzValue]="0">否</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired>更新时间</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group formControlName="updateFlag" nzName="updateFlag">
+            <label nz-radio [nzValue]="1">是</label>
+            <label nz-radio [nzValue]="0">否</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </div>
+</form>
