--- a/src/app/pages/post/post-form/post-form.component.less
+++ b/src/app/pages/post/post-form/post-form.component.less
@@ -67,4 +67,10 @@
       display: block;
     }
   }
+
+  .title-input {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
