--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -93,7 +93,9 @@
   <tr *ngFor="let data of postList">
     <td [nzChecked]="checkedMap[data.post.postId] || false" (nzCheckedChange)="onItemChecked(data.post.postId, $event)"></td>
     <ng-container *ngIf="postType !== 'attachment'">
-      <td nzEllipsis [title]="data.post.postTitle">{{ data.post.postTitle }}</td>
+      <td nzEllipsis [title]="data.post.postTitle">
+        <a [href]="data.post.postGuid" target="_blank">{{ data.post.postTitle }}</a>
+      </td>
       <td [title]="data.post.postDate | date: 'yyyy-MM-dd'">{{ data.post.postDate | date: 'yy-MM-dd' }}</td>
       <td nzEllipsis *ngIf="postType === 'post'">
         <a routerLink="./" [queryParams]="{category: cat.slug}" *ngFor="let cat of data.categories">
@@ -207,9 +209,10 @@
           <nz-form-item>
             <nz-form-label nzRequired>标题</nz-form-label>
             <nz-form-control [nzErrorTip]="titleErrorTpl">
-              <input nz-input type="text" formControlName="title" placeholder="请输入标题"/>
+              <input nz-input type="text" formControlName="title" [maxlength]="maxTitleLength" placeholder="请输入标题"/>
               <ng-template #titleErrorTpl let-control>
                 <ng-container *ngIf="control.hasError('required')">请输入标题</ng-container>
+                <ng-container *ngIf="control.hasError('maxlength')">标题最大长度为{{maxTitleLength}}字符</ng-container>
               </ng-template>
             </nz-form-control>
           </nz-form-item>
@@ -312,7 +315,7 @@
             >
               <input nz-input type="text" formControlName="password" placeholder="请输入密码"/>
               <ng-template #passwordErrorTpl>
-                <ng-container *ngIf="postForm.errors?.['password']">请输入密码</ng-container>
+                <ng-container *ngIf="postForm.errors?.['password'].required">请输入密码</ng-container>
               </ng-template>
             </nz-form-control>
           </nz-form-item>
@@ -356,9 +359,10 @@
               [nzValidateStatus]="postForm.get('source')?.dirty && postForm.errors?.['source'] ? 'error' : 'success'"
               [nzErrorTip]="sourceErrorTpl"
             >
-              <input nz-input type="text" formControlName="source" placeholder="请输入来源"/>
+              <input nz-input type="text" formControlName="source" [maxlength]="maxPostSourceLength" placeholder="请输入来源"/>
               <ng-template #sourceErrorTpl>
-                <ng-container *ngIf="postForm.errors?.['source']">请输入来源</ng-container>
+                <ng-container *ngIf="postForm.errors?.['source'].required">请输入来源</ng-container>
+                <ng-container *ngIf="postForm.errors?.['source'].maxlength">来源最大长度为{{maxPostSourceLength}}字符</ng-container>
               </ng-template>
             </nz-form-control>
           </nz-form-item>
@@ -370,9 +374,10 @@
               [nzValidateStatus]="postForm.get('author')?.dirty && postForm.errors?.['author'] ? 'error' : 'success'"
               [nzErrorTip]="authorErrorTpl"
             >
-              <input nz-input type="text" formControlName="author" placeholder="请输入作者"/>
+              <input nz-input type="text" formControlName="author" [maxlength]="maxPostAuthorLength" placeholder="请输入作者"/>
               <ng-template #authorErrorTpl>
-                <ng-container *ngIf="postForm.errors?.['author']">请输入作者</ng-container>
+                <ng-container *ngIf="postForm.errors?.['author'].required">请输入作者</ng-container>
+                <ng-container *ngIf="postForm.errors?.['author'].maxlength">作者最大长度为{{maxPostAuthorLength}}字符</ng-container>
               </ng-template>
             </nz-form-control>
           </nz-form-item>
