--- a/src/app/pages/post/post-form/post-form.component.less
+++ b/src/app/pages/post/post-form/post-form.component.less
@@ -34,15 +34,15 @@
         top: -0.5px;
         margin: 0 8px 0 2px;
       }
+    }
 
-      &.required::before {
-        margin-right: 4px;
-        color: #ff4d4f;
-        font-size: 14px;
-        font-family: SimSun, sans-serif;
-        line-height: 1;
-        content: '*';
-      }
+    &.required > label::before {
+      margin-right: 4px;
+      color: #ff4d4f;
+      font-size: 14px;
+      font-family: SimSun, sans-serif;
+      line-height: 1;
+      content: '*';
     }
   }
 
