--- a/src/styles.less
+++ b/src/styles.less
@@ -37,6 +37,28 @@
   }
 }
 
+.confirm-warning {
+  color: #ff4d4f;
+  font-weight: bold;
+}
+
+.confirm-list {
+  margin-top: 4px;
+
+  .confirm-list-index {
+    display: inline-block;
+    margin-right: 8px;
+    width: 24px;
+    text-align: right;
+  }
+
+  nz-list-item {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
 .select-loading {
   text-align: center;
 
