--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -10,7 +10,7 @@
   <ng-container *ngSwitchCase="'attachment'">
     <a nz-button nzType="primary" routerLink="/resource/upload">上传文件</a>
   </ng-container>
-  <button nz-button nzType="default" [disabled]="!trashEnabled" [nzLoading]="false">删除</button>
+  <button nz-button nzType="default" [disabled]="!trashEnabled" (click)="deletePosts()">删除</button>
   <div class="table-search">
     <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
       <input nz-input type="text" [(ngModel)]="keyword" (keyup)="onPostSearch($event)" placeholder="Search..."/>
@@ -143,7 +143,7 @@
         <a [routerLink]="postType === 'post' ? './edit' : '/post/edit-standalone'" [queryParams]="{postId: data.post.postId}">编辑</a>
         <nz-divider nzType="vertical"></nz-divider>
       </ng-container>
-      <a href="#">删除</a>
+      <a (click)="deletePosts([data.post.postId])" *ngIf="data.post.postStatus !== 'trash'">删除</a>
     </td>
   </tr>
   </tbody>
@@ -451,3 +451,13 @@
     <button nz-button nzType="primary" (click)="savePost()" [nzLoading]="saveLoading">确定</button>
   </ng-template>
 </nz-modal>
+<ng-template #confirmModalContent>
+  <div>
+    <div>确定删除以下 <span class="confirm-warning">{{checkedPosts.length}}</span> 篇内容吗？</div>
+    <nz-list nzSize="small" class="confirm-list">
+      <nz-list-item nzNoFlex *ngFor="let post of checkedPosts; let i = index" [title]="post.post.postTitle">
+        <span class="confirm-list-index">{{i + 1}}.</span>{{post.post.postTitle}}
+      </nz-list-item>
+    </nz-list>
+  </div>
+</ng-template>
