--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -137,7 +137,7 @@
       <td [title]="data.post.postCreated | date:'yyyy-MM-dd HH:mm'">{{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}</td>
     </ng-container>
     <td nzRight>
-      <a (click)="showPostModal(data)">快速编辑</a>
+      <a (click)="editPost(data)">快速编辑</a>
       <nz-divider nzType="vertical"></nz-divider>
       <ng-container *ngIf="postType !== 'attachment'">
         <a [routerLink]="postType === 'post' ? './edit' : '/post/edit-standalone'" [queryParams]="{postId: data.post.postId}">编辑</a>
@@ -174,7 +174,7 @@
         nzShowSearch
         nzPlaceHolder="请选择分类"
         [nzDropdownStyle]="{'max-height': '320px'}"
-        [nzExpandedKeys]="postCategoryExpanded"
+        [nzExpandedKeys]="categoryFilterExpanded"
         [nzNodes]="categoryFilterList"
         [(ngModel)]="activeCategory"
       ></nz-tree-select>
